@@ -1,16 +1,14 @@
 useDynLib(grDevices)
 
-export(Hershey, check.options, col2rgb, colors, colours, cm,
-       colorRamp, colorRampPalette, convertColor, colorConverter,
-       colorspaces,
+export(Hershey, check.options, col2rgb, colors, colours, cm, colorRamp,
+       colorRampPalette, convertColor, colorConverter, colorspaces,
        cm.colors, dev.control, dev.copy, dev.copy2eps, dev.cur,
        dev.interactive, dev.list, dev.next, dev.off, dev.prev,
-       dev.print, dev.set, getGraphicsEvent, graphics.off, gray,
-       grey, heat.colors, hsv, hcl, make.rgb,
+       dev.print, dev.set, getGraphicsEvent, graphics.off, gray, grey,
+       gray.colors, grey.colors, heat.colors, hsv, hcl, make.rgb,
        palette, pdf, pictex, postscript, postscriptFont,
-       postscriptFonts, ps.options, rainbow, recordGraphics,
-       recordPlot, replayPlot,
-       rgb, rgb2hsv, terrain.colors, topo.colors, xfig)
+       postscriptFonts, ps.options, rainbow, recordGraphics, recordPlot,
+       replayPlot, rgb, rgb2hsv, terrain.colors, topo.colors, xfig)
 
 S3method(print, recordedplot)
 S3method(print, colorConverter)
